# sbsys-ng

./: .env.example  LICENSE  README.md  pyproject.toml
src/sbsys/: __init__.py  client.py  exceptions.py  manager.py  models.py
src/sbsys/functionality/: borger.py  bruger.py  dokumenter.py  erindringer.py  journalnotater.py  sager.py  sagsskabeloner.py
tests/: conftest.py  test_borger.py  test_bruger.py  test_client.py  test_dokumenter.py  test_erindringer.py  test_journalnotater.py  test_models.py  test_sager.py  test_sagsskabeloner.py
