[project]
name = "sbsys"
version = "0.1.0"
description = "Python client for the SbSys case management REST API"
readme = "README.md"
authors = [
    { name = "Michael Wulff Nielsen", email = "michael@hypermail.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
]
